# asdlc-knowledge

./: .gitignore  LICENSE  PLAN.md  README.md  SOLUTION.md  azure-pipelines.yml  goal.md  pyproject.toml
.asdlc/knowledge/: AGENTS.md  index.md  log.md  manifest.yaml  mkdocs.yml
.asdlc/knowledge/_schema/: frontmatter.schema.json
.asdlc/knowledge/_templates/: concept.md  entity.md  source.md
.asdlc/knowledge/inbox/: README.md
.asdlc/knowledge/ingest/: README.md  __init__.py
.asdlc/knowledge/ingest/adapters/: __init__.py  base.py  docling_adapter.py  markitdown_adapter.py  plaintext_adapter.py
.asdlc/knowledge/raw/: karpathy-llm-wiki.md  rag-lewis-2020.md
.asdlc/knowledge/tools/: _common.py  ingest_cmd.py  kb.py  lint.py  mkdocs_hooks.py  new.py  purge.py  scaffold.py  search.py  verify.py  viz.py
.asdlc/knowledge/wiki/: index.md  tags.md
.asdlc/knowledge/wiki/assets/: status.css
.asdlc/knowledge/wiki/concepts/: agentic-memory.md  approximate-nearest-neighbor.md  chunking.md  context-engineering.md  embeddings.md  graph-rag.md  hallucination.md  hybrid-search.md  knowledge-graph.md  knowledge-management-for-llms.md  llm-wiki-pattern.md  model-context-protocol.md  reranking.md  retrieval-augmented-generation.md  semantic-search.md  vector-database.md  zettelkasten.md
.asdlc/knowledge/wiki/entities/: akari-asai.md  andrej-karpathy.md  anthropic.md  asdlc-knowledge-base.md  darren-edge.md  docling.md  faiss.md  markitdown.md  meta-ai.md  microsoft-research.md  mkdocs.md  nils-reimers.md  (+4 more)
.github/workflows/: publish.yml  scaffold.yml  validate.yml
(+11 files in other folders)
