[project]
name = "asdlc-knowledge"
version = "0.1.0"
description = "A persistent, file-based LLM knowledge base (Karpathy 'LLM wiki' pattern) that scaffolds from a single source of truth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Deterministic frontmatter validation in `kb lint`.
lint = ["jsonschema>=4.0"]
# Binary ingestion backends (lazy-imported; install only what you need).
markitdown = ["markitdown>=0.0.1a2"]
docling = ["docling>=1.0.0"]
# Static-site visualization layer.
viz = ["mkdocs-material>=9.5", "pymdown-extensions>=10.0", "mkdocs-redirects>=1.2"]
# Everything, for a full local workflow.
all = [
    "jsonschema>=4.0",
    "markitdown>=0.0.1a2",
    "docling>=1.0.0",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
    "mkdocs-redirects>=1.2",
]

[tool.setuptools]
# The KB is a data-first project; the tools live under .asdlc/knowledge/tools
# and are invoked as `python3 tools/kb.py <op>` — no console script is
# installed, since no importable package ships with this distribution.
py-modules = []
